# teensy-variable-playback

./: .gitignore  CMakeLists.txt  EventResponder-TVP.md  LICENSE  README.md  ResamplingSdReader.cpp  ResamplingSdReader.h  build-linux.sh  build-t41.sh  build.sh  cmake_declare_and_fetch.cmake.in  keywords.txt  library.json  library.properties  playsdrawresmp.h  playsdwavresmp.cpp  playsdwavresmp.h  teensy.build.cmake.in  teensy.options.cmake.in  teensy_sampler.h  test.sh  waveheaderparser.cpp  waveheaderparser.h
.github/workflows/: c-cpp.yml  soundio.yml  teensy+cpp.yml  teensy.yml  teensy41_ex_array.yml  teensy41_ex_littlefs.yml  teensy41_ex_sdraw.yml  teensy41_ex_sdwav.yml  teensy41_ex_serialflash.yml  teensy41_lib.yml  ubuntu_x64_cmake.yml
audio/: CMakeLists.txt  playsdrawresmp.h  playsdwavresmp.cpp  playsdwavresmp.h
cmake/: install_arduino_library.cmake  teensy_variable_playback.cmake.in
cmake/toolchains/: linux.cmake  teensy41.cmake
common/: CMakeLists.txt  ResamplingSdReader.cpp  ResamplingSdReader.h  spi_interrupt.h
examples/: CMakeLists.cmake.in  CMakeLists.txt  examples.cmake.in
examples/FileAccess/: FileAccess.ino
examples/LittleFS/: CMakeLists.txt  littlefs_raw.ino
examples/PlayPiano/: PlayPiano.ino  prelude846.c
examples/SerialFlash/: CMakeLists.txt  serialflash.ino
examples/array/: CMakeLists.txt  array.cpp  array.ino
examples/basic/: CMakeLists.txt  basic.cpp
examples/midilooper/: CMakeLists.txt  midilooper.ino
examples/playarrayresmp/: CMakeLists.txt  playarrayresmp.cpp
examples/sampleloader/: CMakeLists.txt  README.md  sampleloader.ino
examples/sd_play_all/: CMakeLists.txt  sd_play_all.ino
examples/sd_raw/: CMakeLists.txt  sd_raw.cpp  sd_raw.ino
examples/sd_wav/: CMakeLists.txt  sd_wav.ino
extras/linux/array/: CMakeLists.txt  array.cpp
extras/linux/sd_raw/: CMakeLists.txt  sd_raw.cpp
extras/soundio/save_raw/: CMakeLists.txt  save_raw.cpp
extras/soundio/save_raw_sd/: CMakeLists.txt  save_raw_sd.cpp
extras/soundio/save_wav/: CMakeLists.txt  save_wav.cpp
extras/soundio/sd_play_all/: CMakeLists.txt  sd_play_all.cpp
src/: AudioEventResponder.cpp  AudioEventResponder.h  CMakeLists.linux.cmake.in  CMakeLists.teensy.cmake.in  CMakeLists.txt  IndexableFile.cpp  IndexableFile.h  IndexableLittleFSFile.h  IndexableSDFile.h  IndexableSerialFlashFile.h  ResamplingArrayReader.cpp  ResamplingArrayReader.h  ResamplingLfsReader.cpp  ResamplingLfsReader.h  ResamplingReader.h  ResamplingSdReader.cpp  ResamplingSdReader.h  ResamplingSerialFlashReader.h  TeensyVariablePlayback.h  interpolation.cpp  interpolation.h  loop_type.h  playarrayresmp.cpp  playarrayresmp.h  playlfsresmp.cpp  playlfsresmp.h  playresmp.h  playsdrawresmp.cpp  playsdrawresmp.h  playsdresmp.cpp  playsdresmp.h  playsdwavresmp.cpp  playsdwavresmp.h  playserialflashresmp.cpp  playserialflashresmp.h  spi_interrupt.cpp  waveheaderparser.h
teensy/: CMakeLists.txt  Print.cpp  Print.h  Printable.h  hardware_serial.cpp  hardware_serial.h  mock_arduino.cpp  mock_arduino.h
teensy/SD/: File.cpp  SD.cpp  SD.h
teensy/SD/utility/: Sd2Card.h  Sd2PinMap.h  SdFat.h  SdFatUtil.h  SdFile.cpp
teensy_cores_x86/: CMakeLists.txt  hardware_serial.h
teensy_cores_x86/SD/: File.cpp  SD.cpp  SD.h
teensy_cores_x86/SD/utility/: Sd2Card.cpp  SdFat.h
test/: CMakeLists.txt  ResamplingReaderFixture.h  WaveHeaderParserFixture.h  boost-to-junit-xml.xslt  embedfile.c  test_no_loop_forward_double_playbackrate.cpp  test_no_loop_forward_playback.cpp  test_parse_wave_header.cpp  test_raw_mono_loop_forward_playback.cpp  test_raw_mono_noloop_forward_double_rate_playback.cpp  test_raw_mono_noloop_forward_playback.cpp  test_wav_mono_loop_forward_playback.cpp  test_wav_mono_noloop_backward_playback.cpp  test_wav_mono_noloop_forward_playback.cpp  utils.cpp  utils.h
test/audio/: output_test.cpp  output_test.h
test/audio/array/: AudioArrayFixture.h  test_array_mono_loop_backward_playback.cpp  test_array_mono_loop_forward_playback.cpp  test_array_mono_noloop_backward_playback.cpp  test_array_mono_noloop_forward_playback.cpp  test_array_stereo_loop_backward_playback.cpp  test_array_stereo_loop_forward_playback.cpp  test_array_stereo_noloop_backward_playback.cpp  test_array_stereo_noloop_forward_playback.cpp
test/audio/wav/: AudioWavFixture.h  test_wav_mono_loop_forward_playback.cpp  test_wav_stereo_loop_forward_playback.cpp  test_wav_stereo_pingpong_playback.cpp  test_wav_tags.cpp
test/low_level/array/: ResamplingArrayFixture.h  test_array_mono_loop_forward_playback.cpp  test_array_stereo_loop_forward_playback.cpp
test/low_level/arraywav/: ResamplingArrayWavFixture.h  test_array_mono_loop_forward_playback.cpp  test_array_stereo_loop_forward_playback.cpp
test/low_level/indexedfile/: IndexedFileFixture.h  test_indexablefile.cpp
test/low_level/sd/: CMakeLists.txt  ResamplingReaderFixture.h  test_raw_mono_loop_forward_playback.cpp  test_raw_mono_noloop_forward_double_rate_playback.cpp  test_raw_mono_noloop_forward_playback.cpp  test_wav_mono_loop_forward_playback.cpp  test_wav_mono_noloop_backward_playback.cpp  test_wav_mono_noloop_forward_playback.cpp
test/low_level/wav_header/: CMakeLists.txt  WaveHeaderParserFixture.h  test_parse_wave_header.cpp
test/resources/input/: PNO1C1.raw  kick.raw  stereo_souljah.raw
test_x86/: CMakeLists.txt  ResamplingReaderFixture.h  readertests.cpp  readme.MD  runtests.cpp  test_no_loop_forward_double_playbackrate.cpp  test_no_loop_forward_playback.cpp
