cmake_minimum_required(VERSION 3.5)
project(teensy-variable-playback)
if (NOT DEFINED TEENSY_VERSION)
    set(BUILD_FOR_LINUX 1)
    add_definitions(-DBUILD_FOR_LINUX)
endif()

if (NOT DEFINED BUILD_FOR_LINUX)    
    import_arduino_library(cores ${COREPATH} avr debug util)
    import_arduino_library(SPI ${DEPSPATH}/SPI)
    import_arduino_library(SdFat ${DEPSPATH}/SdFat/src common DigitalIO ExFatLib FatLib FsLib iostream SdCard SpiDriver)
    import_arduino_library(SD ${DEPSPATH}/SD/src)
    import_arduino_library(SerialFlash ${DEPSPATH}/SerialFlash util)
    import_arduino_library(Wire ${DEPSPATH}/Wire utility)
    import_arduino_library(arm_math ${DEPSPATH}/arm_math/src)
    import_arduino_library(Audio ${DEPSPATH}/Audio utility)
    import_arduino_library(LittleFS ${DEPSPATH}/LittleFS/src littlefs)
    add_subdirectory(src)
    add_subdirectory(examples)
else()

    include(cmake_declare_and_fetch.cmake.in)
    DeclareAndFetch(teensy_x86_stubs            https://github.com/newdigate/teensy-x86-stubs.git main src)
    DeclareAndFetch(teensy_x86_sd_stubs         https://github.com/newdigate/teensy-x86-sd-stubs main src)
    DeclareAndFetch(teensy_audio_x86_stubs      https://github.com/newdigate/teensy-audio-x86-stubs main src)
    add_subdirectory(src)
    add_subdirectory(test)

    if (DEFINED BUILD_SOUNDIO_EXAMPLES)
        find_library(LIB_soundio soundio)
        if (LIB_soundio)
            #add_subdirectory(extras/soundio/playqueue)
            add_subdirectory(extras/soundio/save_raw)
            add_subdirectory(extras/soundio/save_raw_sd)
            add_subdirectory(extras/soundio/save_wav)
            add_subdirectory(extras/soundio/sd_play_all)
            add_subdirectory(extras/linux/array)
            add_subdirectory(extras/linux/sd_raw)
        endif ()
    endif ()
endif()