cmake_minimum_required(VERSION 3.5)
project(teensy-variable-playback)
include(cmake_declare_and_fetch.cmake.in)

if (NOT DEFINED TEENSY_VERSION)
    set(BUILD_FOR_LINUX 1)
    add_definitions(-DBUILD_FOR_LINUX)
endif()

if (NOT DEFINED BUILD_FOR_LINUX)
    DeclareAndFetchNoSource(teensy_cmake_macros            https://github.com/newdigate/teensy-cmake-macros.git main)
    include(${teensy_cmake_macros_SOURCE_DIR}/CMakeLists.include.txt)
    import_arduino_library(cores ${teensy_cores_SOURCE_DIR}/teensy4 avr debug util)

    import_arduino_library_git(SPI https://github.com/PaulStoffregen/SPI.git master "")
    import_arduino_library_git(SdFat https://github.com/PaulStoffregen/SdFat.git master "src" common DigitalIO ExFatLib FatLib FsLib iostream SdCard SpiDriver)
    import_arduino_library_git(SD https://github.com/PaulStoffregen/SD.git Juse_Use_SdFat src)
    import_arduino_library_git(SerialFlash https://github.com/PaulStoffregen/SerialFlash.git master "")
    import_arduino_library_git(Wire https://github.com/PaulStoffregen/Wire.git master "" utility)
    import_arduino_library_git(arm_math https://github.com/PaulStoffregen/arm_math.git master "src")
    import_arduino_library_git(Audio https://github.com/PaulStoffregen/Audio.git master "" "utility")
    import_arduino_library_git(LittleFS https://github.com/PaulStoffregen/LittleFS.git main "src" "littlefs")
    add_subdirectory(src)
    add_subdirectory(examples)
else()


    DeclareAndFetch(teensy_x86_stubs            https://github.com/newdigate/teensy-x86-stubs.git main src)
    DeclareAndFetch(teensy_x86_sd_stubs         https://github.com/newdigate/teensy-x86-sd-stubs main src)
    DeclareAndFetch(teensy_audio_x86_stubs      https://github.com/newdigate/teensy-audio-x86-stubs main src)
    add_subdirectory(src)
    add_subdirectory(test)

    if (DEFINED BUILD_SOUNDIO_EXAMPLES)
        find_library(LIB_soundio soundio)
        if (LIB_soundio)
            #add_subdirectory(extras/soundio/playqueue)
            add_subdirectory(extras/soundio/save_raw)
            add_subdirectory(extras/soundio/save_raw_sd)
            add_subdirectory(extras/soundio/save_wav)
            add_subdirectory(extras/soundio/sd_play_all)
            add_subdirectory(extras/linux/array)
            add_subdirectory(extras/linux/sd_raw)
        endif ()
    endif ()
endif()