if (NOT DEFINED OPT_BUILD_FOR_LINUX_IS_DEFINED)
    option(OPT_BUILD_FOR_LINUX "Build for linux emulator" OFF)
    set(OPT_BUILD_FOR_LINUX_IS_DEFINED 1)
    if (OPT_BUILD_FOR_LINUX)
        message(STATUS "!!! Build for linux emulator" )
        set(BUILD_FOR_LINUX 1)
        add_definitions(-DBUILD_FOR_LINUX)
    else()
        message(STATUS "!!! Build for teensy" )
        include(../teensy.options.cmake.in)
        include(../teensy.build.cmake.in)
    endif()
endif()

cmake_minimum_required(VERSION 3.5)
add_subdirectory(array)
add_subdirectory(playarrayresmp)
add_subdirectory(sd_raw)
